samples/_failures_safe/1761497536_92577a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9fc32e28.c: In function ‘main’:
./samples/SAFE/__tmp_9fc32e28.c:149:5: error: expected expression at end of input
  149 |     if (strcmp(filter, "ALL") !=
      |     ^~
./samples/SAFE/__tmp_9fc32e28.c:149:5: error: expected declaration or statement at end of input
